--- a/2022/01/CMakeLists.txt
+++ b/2022/01/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_executable(01 main.cpp)
+add_executable(adventofcode day_2022_01.cpp day_2022_01.h ../../main.cpp)
+#add_library(day202201 day_2022_01.cpp day_2022_01.h)
+#target_include_directories(day202201 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 # Move the data files to the cmake binary directory.
-
 file(COPY "${CMAKE_SOURCE_DIR}/2022/01/data.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
