--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(adventofcode)
 
 set(CMAKE_CXX_STANDARD 23)
+#add_executable(adventofcode main.cpp)
 
 add_subdirectory(2022)
