Change to main in src directory. The year is included as a library.

--- a/2022/CMakeLists.txt
+++ b/2022/CMakeLists.txt
@@ -1,1 +1,9 @@
 add_subdirectory(01)
+
+add_library(
+        adventofcode_2022_lib SHARED
+        01/day_2022_01.h
+        01/day_2022_01.cpp
+)
+
+target_include_directories(adventofcode_2022_lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/01")
