--- a/2022/02/CMakeLists.txt
+++ b/2022/02/CMakeLists.txt
@@ -1,2 +1,3 @@
 # Move the data files to the cmake binary directory.
 file(COPY "${CMAKE_SOURCE_DIR}/2022/02/data.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "${CMAKE_SOURCE_DIR}/2022/02/example.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
