--- a/2022/10/CMakeLists.txt
+++ b/2022/10/CMakeLists.txt
@@ -1,3 +1,4 @@
 # Move the data files to the cmake binary directory.
 file(COPY "${CMAKE_SOURCE_DIR}/2022/10/data.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "${CMAKE_SOURCE_DIR}/2022/10/example.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "${CMAKE_SOURCE_DIR}/2022/10/basic_example.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
