Finish day 1 part 2.

--- a/2023/01/CMakeLists.txt
+++ b/2023/01/CMakeLists.txt
@@ -1,3 +1,4 @@
 # Move the data files to the cmake binary directory.
 file(COPY "${CMAKE_SOURCE_DIR}/2023/01/data.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "${CMAKE_SOURCE_DIR}/2023/01/example.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "${CMAKE_SOURCE_DIR}/2023/01/example_2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
